# localstack-poc

./: .gitignore  DEMO.md  Makefile  README.md  docker-compose.yml
app/: pyproject.toml
app/src/claims_processor/: aws.py  producer.py
app/tests/: conftest.py
app/tests/integration/: test_pipeline.py
app/tests/unit/: test_handler.py
infra/: main.tf
lambdas/claim_processor/: handler.py
scripts/: demo.sh
